[gd_scene load_steps=17 format=3 uid="uid://bb3rpff8vrjhh"]

[ext_resource type="PackedScene" uid="uid://d34k8bhduppp8" path="res://scene/Bird.tscn" id="1_57m10"]
[ext_resource type="Script" uid="uid://dd2bm3m0raskj" path="res://script/Game.gd" id="1_cica3"]
[ext_resource type="Texture2D" uid="uid://bw4k3kxyen6yg" path="res://image/land.png" id="3_ii7vv"]
[ext_resource type="Texture2D" uid="uid://ollibr005jsd" path="res://image/bg_day.png" id="4_p31ru"]
[ext_resource type="Texture2D" uid="uid://baywi268vk2wi" path="res://image/hp/0.png" id="5_xq86p"]
[ext_resource type="Texture2D" uid="uid://cy84765p4s40s" path="res://image/hp/1.png" id="6_ma6uf"]
[ext_resource type="Texture2D" uid="uid://dcceghnl5gjwq" path="res://image/hp/2.png" id="7_3rdft"]
[ext_resource type="Texture2D" uid="uid://db4jd354mqudu" path="res://image/hp/3.png" id="8_lplss"]
[ext_resource type="Texture2D" uid="uid://dynec8127lrcn" path="res://image/bird1_0.png" id="9_cc2dn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fymwr"]
size = Vector2(1138, 102)

[sub_resource type="SpriteFrames" id="SpriteFrames_5frqc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xq86p")
}, {
"duration": 1.0,
"texture": ExtResource("6_ma6uf")
}, {
"duration": 1.0,
"texture": ExtResource("7_3rdft")
}, {
"duration": 1.0,
"texture": ExtResource("8_lplss")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_2fae4"]
offsets = PackedFloat32Array(0.00790514, 1)
colors = PackedColorArray(0.0941176, 0.458824, 0.823529, 0.498039, 0.0941176, 0.458824, 0.823529, 0.152941)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hx1o0"]
gradient = SubResource("Gradient_2fae4")

[sub_resource type="Curve" id="Curve_mvas1"]
_data = [Vector2(0.00996678, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.608108), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_54858"]
curve = SubResource("Curve_mvas1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g7xqs"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_54858")
color_ramp = SubResource("GradientTexture1D_hx1o0")

[node name="Game" type="Node2D"]
script = ExtResource("1_cica3")

[node name="Bird" parent="." instance=ExtResource("1_57m10")]
position = Vector2(100, 200)

[node name="Camera2d" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Pipes" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Lands" type="Node2D" parent="."]
z_index = 10

[node name="Land1" type="StaticBody2D" parent="Lands"]
position = Vector2(-576, 456)
metadata/_edit_lock_ = true

[node name="CollisionShape2d" type="CollisionShape2D" parent="Lands/Land1"]
shape = SubResource("RectangleShape2D_fymwr")

[node name="Sprite2d" type="Sprite2D" parent="Lands/Land1"]
texture = ExtResource("3_ii7vv")

[node name="Land2" type="StaticBody2D" parent="Lands"]
position = Vector2(576, 456)
metadata/_edit_lock_ = true

[node name="CollisionShape2d" type="CollisionShape2D" parent="Lands/Land2"]
shape = SubResource("RectangleShape2D_fymwr")

[node name="Sprite2d" type="Sprite2D" parent="Lands/Land2"]
texture = ExtResource("3_ii7vv")

[node name="Land3" type="StaticBody2D" parent="Lands"]
position = Vector2(1728, 456)
metadata/_edit_lock_ = true

[node name="CollisionShape2d" type="CollisionShape2D" parent="Lands/Land3"]
shape = SubResource("RectangleShape2D_fymwr")

[node name="Sprite2d" type="Sprite2D" parent="Lands/Land3"]
texture = ExtResource("3_ii7vv")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1152, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 256)
texture = ExtResource("4_p31ru")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HP" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="UI/HP"]
position = Vector2(45, 43)
scale = Vector2(0.495238, 0.495238)
sprite_frames = SubResource("SpriteFrames_5frqc")

[node name="HP" type="Label" parent="UI/HP"]
layout_mode = 0
offset_left = 76.0
offset_top = 17.0
offset_right = 160.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 37
text = "99"
vertical_alignment = 1

[node name="BirdSpeedUpEffect" type="GPUParticles2D" parent="."]
scale = Vector2(3.33333, 3.33333)
process_material = SubResource("ParticleProcessMaterial_g7xqs")
texture = ExtResource("9_cc2dn")

[node name="Timer" type="Timer" parent="."]
autostart = true
